# classic_pacmdp_envs

./: README.md  pyproject.toml
classic_pacmdp_envs/: __init__.py  riverswim.py  sixarms.py
examples/: pure_jax_training.py
riverswim/: __init__.py  riverswim.py
