[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riverswim"
version = "0.1.0"
description = "A minimal implementation of River Swim environment compatible with Gymnasium Env API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lucas Cruz", email = "lucas@lucas-cruz.com" }]
license = { text = "MIT License" }
dependencies = [
    "gymnasium>=1.0.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "pre-commit>=4.0.1",
]

[tool.black]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["gymnasium", "tests", "docs/_scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

[tool.pyright]
include = ["gymnasium/**"]
exclude = ["tests/**", "**/node_modules", "**/__pycache__"]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.8"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, pygame, box2d)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"
# Some modules are missing type stubs, which is an issue when running pyright locally
reportMissingTypeStubs = false
# For warning and error, will raise an error when
reportInvalidTypeVarUse = "none"

reportGeneralTypeIssues = "none"  # -> commented out raises 489 errors
reportAttributeAccessIssue = "none"  # pyright provides false positives
reportArgumentType = "none"  # pyright provides false positives

reportPrivateUsage = "warning"

reportIndexIssue = "none"  # TODO fix one by one
reportReturnType = "none"  # TODO fix one by one
reportCallIssue = "none"  # TODO fix one by one
reportOperatorIssue = "none"  # TODO fix one by one
reportInvalidTypeForm = "none"  # TODO fix one by one
reportOptionalMemberAccess = "none"  # TODO fix one by one
reportAssignmentType = "none"  # TODO fix one by one


[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:gymnasium.*:"]
